--- a/assignments/01_assignment.ipynb
+++ b/assignments/01_assignment.ipynb
@@ -145,24 +145,32 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "l"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "2e749c9d",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1843579448.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [34]\u001b[1;36m\u001b[0m\n\u001b[1;33m    `length (letters)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1:\n",
     "\n",
-    "# Your code goes here"
+    "\n",
+    "\n"
    ]
   },
   {
@@ -181,17 +189,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "a623da72",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'set' has no attribute 'seed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [39]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;43mset\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mseed\u001b[49m(\u001b[38;5;241m2022\u001b[39m)\n\u001b[0;32m      2\u001b[0m vec \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m-\u001b[39m sample(c(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m\"\u001b[39m), size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m, replace \u001b[38;5;241m=\u001b[39m TRUE)\n\u001b[0;32m      3\u001b[0m typeof(vec)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: type object 'set' has no attribute 'seed'"
+     ]
+    }
+   ],
    "source": [
     "set.seed(2022)\n",
-    "vec <- sample(c(\"1\", \"0\", \"o\"), size = 100, replace = TRUE)"
+    "vec <- sample(c(\"1\", \"0\", \"o\"), size = 100, replace = TRUE)\n",
+    "typeof(vec)"
    ]
   },
   {
@@ -207,7 +228,11 @@
    "source": [
     "# Exercise 2:\n",
     "\n",
-    "# Your code goes here"
+    "# Your code goes here\n",
+    "> letters.list <- list(\"a\", \"b\",  \"c\",  \"d\",  \"e\",  \"f\",  \"g\",  \"h\",  \"i\",  \"j\",  \"k\",  \"l\",  \"m\",  \"n\",  \"o\",  \"p\",  \"q\", \"r\",  \"s\",  \"t\",  \"u\",  \"v\",  \"w\",  \"x\",  \"y\",  \"z\")\n",
+    "\n",
+    "letters <- list (a, b,  c,  d,  e,  f,  g,  h,  i,  j,  k,  l,  m,  n,  o,  p,  q, r,  s,  t,  u,  v,  w,  x,  y,  z)\n",
+    "l [-c(1, 5, 9, 15, 21)]"
    ]
   },
   {
@@ -236,16 +261,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "books <- c(\n",
-    "  \"Dubliners\",\n",
-    "  \"Ulysses\",\n",
-    "  \"War and Peace\",\n",
-    "  \"Normal People\",\n",
-    "  \"Crime and Punishment\",\n",
-    "  \"The Picture of Dorian Gray\"\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -287,18 +303,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "856b7253",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'set' has no attribute 'seed'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [40]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;43mset\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mseed\u001b[49m(\u001b[38;5;241m2022\u001b[39m)\n\u001b[0;32m      2\u001b[0m educ \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m-\u001b[39m rpois(\u001b[38;5;241m1000\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      3\u001b[0m educ \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m-\u001b[39m ifelse(educ \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m4\u001b[39m, educ)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: type object 'set' has no attribute 'seed'"
+     ]
+    }
+   ],
    "source": [
     "set.seed(2022)\n",
     "educ <- rpois(1000, 2)\n",
-    "educ <- ifelse(educ > 4, 4, educ)"
+    "educ <- ifelse(educ > 4, 4, educ)\n"
    ]
   },
   {
@@ -418,17 +446,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "4.1.2"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
